added json files for new broccoli wood items

--- a/src/main/resources/assets/keyonmod/lang/en_us.json
+++ b/src/main/resources/assets/keyonmod/lang/en_us.json
@@ -2,7 +2,7 @@
   "item.keyonmod.cheese_pizza": "Cheese Pizza",
   "item.keyonmod.keyon_spawn_egg": "Keyon Spawn Egg",
 
-  "block.keyonmod.broccoli_planks": "Broccoli Stairs",
+  "block.keyonmod.broccoli_planks": "Broccoli Planks",
   "block.keyonmod.broccoli_stairs": "Broccoli Stairs",
   "block.keyonmod.broccoli_slab": "Broccoli Slab",
   "block.keyonmod.broccoli_button": "Broccoli Button",
